# project-jcore

./: .gitignore  CMakeLists.txt  README.md
advanced/: CMakeLists.txt
advanced/graph_execution/: compile.md
advanced/graph_execution/include/: ag_execution_engine.h  agee_internal.h
advanced/graph_execution/src/: agee_core.cpp  agee_executor.cpp  agee_graph_analysis.cpp  agee_memory_manager.cpp  agee_scheduler.cpp  agee_test.cpp
advanced/include/blis/: bli_config.h
advanced/include/openblas/: config_last.h
advanced/jit_kernel/: compile.md
advanced/jit_kernel/include/: jit_kernel_generator.h  jit_kernel_internal.h
advanced/jit_kernel/info/: BUILD_INFO.txt  COMPONENT_SUMMARY.txt
advanced/jit_kernel/src/: jit_core.cpp  jit_kernel_test.cpp  jit_utilities.cpp  jit_wrapper.cpp  llvm_codegen.cpp  vectorization_backends.cpp
advanced/kFusion_engine/: compile.md
advanced/kFusion_engine/include/: kernel_fusion_engine.h  kernel_fusion_engine_internal.h  kernel_fusion_eve.h
advanced/kFusion_engine/src/: kernel_fusion_engine_core.cpp  kernel_fusion_eve.cpp  kernel_fusion_helpers.cpp  kernel_fusion_ops.cpp  kernel_fusion_utils.cpp  test_kernel_fusion.cpp  test_kernel_fusion_eve.cpp
advanced/neural_layer/: compile.md  neural_layer
advanced/neural_layer/include/: neural_primitives.h  neural_primitives_internal.h
advanced/neural_layer/src/: npl_activation_norm.cpp  npl_convolution.cpp  npl_core.cpp  npl_pooling.cpp  npl_tensor_ops.cpp  npl_test.cpp
advanced/operator_graph/: compile.md
advanced/operator_graph/include/: operator_graph.h  operator_graph_internal.h
advanced/operator_graph/src/: operator_graph_analysis.cpp  operator_graph_construction.cpp  operator_graph_core.cpp  operator_graph_execution.cpp  operator_graph_utils.cpp  test_operator_graph.cpp
advanced/polyhedral_optimization/: compile.md  info.txt
advanced/polyhedral_optimization/include/: polyhedral_internal.h  polyhedral_optimization.h
advanced/polyhedral_optimization/src/: polyhedral_core.cpp  polyhedral_llvm_integration.cpp  polyhedral_optimization_test.cpp  polyhedral_tiling.cpp  polyhedral_vectorization.cpp
base/: CMakeLists.txt
base/benchmark/include/: benchmark.h
base/benchmark/src/: benchmark.cpp
base/cache_block/include/: ffm_cache_block.h
base/cache_block/src/: ffm_cache_block.c
base/config_env/include/: config.h
base/config_env/src/: config.cpp
base/cpu_detect/include/: cache_info.h  cpu_features.h  cpu_info.h  numa_info.h
base/cpu_detect/src/: cache_info.cpp  cpu_features.cpp  cpu_info.cpp  numa_info.cpp
base/hp_controller/include/: ffm_hugepage.h
base/hp_controller/src/: ffm_hugepage.c
base/hw_introspect/include/: jcore_hw_introspect.h
base/hw_introspect/src/: cpuid.c  ffm_api.c  topology.c
base/isa_aware/include/: jcore_isa_dispatch.h
base/isa_aware/src/: jcore_cpu_features_x86.c  jcore_isa_dispatch.c  jcore_scalar_kernels.c
base/mem_allocator/include/: mem_wrapper.h  numa_helper.h
base/mem_allocator/src/: mem_wrapper.c  numa_helper.c
base/mem_prefetch/include/: ffm_prefetch.h
base/mem_prefetch/src/: ffm_prefetch.c
base/thread_schedule/include/: thread_scheduler.h
base/thread_schedule/src/: thread_scheduler.cpp
compile/advanced/: compile.md
compile/base/: compile.md
compile/composite/: compile.md
composite/: CMakeLists.txt  dependencies.md
composite/dispatch_kernel/: compile.md
composite/dispatch_kernel/include/: k_kernel_dispatch.h  k_thread_verify.h
composite/dispatch_kernel/src/: jcore_dispatch.cpp  k_adaptive_tuner.cpp  k_cpu_features.cpp  k_isa_dispatch.cpp  k_kernel_dispatch.cpp  k_mock_kernels.cpp  test_kernel_dispatch.cpp
composite/global_thread/: compile.md
composite/global_thread/include/: global_thread_scheduler.h
composite/global_thread/src/: global_thread_scheduler.cpp
composite/include/openblas/: config.h
composite/kernel_autoTuner/: compile.md
composite/kernel_autoTuner/include/: adaptive_tuner.h  kernels_blis.h  kernels_openblas.h
composite/kernel_autoTuner/src/: adaptive_tuner.cpp  kernels_blis.cpp  kernels_openblas.cpp  test_tuner.cpp
composite/mkernel_interface/: compile.md
composite/mkernel_interface/include/: microkernel_interface.h
composite/mkernel_interface/src/: mil_conv.cpp  mil_core.cpp  mil_gemm.cpp  mil_gemv.cpp  mil_util.cpp  mil_vector.cpp  test_microkernel_interface.cpp
composite/numa_manager/: Compile.md
composite/numa_manager/include/: numa_memory_manager.h
composite/numa_manager/src/: numa_memory_manager.cpp
composite/perf_profiler/: compile.md
composite/perf_profiler/include/: profiler_api.h  profiler_kernel_dispatch.h  profiler_papi.h  profiler_region.h  profiler_types.h
composite/perf_profiler/src/: profiler_core.cpp  profiler_export.cpp  profiler_kernel_dispatch.cpp  profiler_papi.cpp  profiler_region.cpp
composite/pool_manager/: command.md
composite/pool_manager/include/: pool_manager.h
composite/pool_manager/src/: pool_manager.cpp
composite/tuning_rCache/: compile.md
composite/tuning_rCache/include/: cached_autotuner.h  tuning_cache.h
composite/tuning_rCache/info/: FILE_STRUCTURE.md  README.md
composite/tuning_rCache/src/: cached_autotuner.cpp  test_cached_autotuner.cpp  tuning_cache.cpp
composite/vmath_engine/: buildSleef.md  command.md
composite/vmath_engine/include/: vmath_engine.h  vmath_fallback.h  vmath_sleef_wrapper.h
composite/vmath_engine/src/: vmath_benchmark.cpp  vmath_engine.cpp  vmath_fallback.cpp  vmath_fused.cpp  vmath_sleef_isolated.cpp  vmath_sleef_wrapper.cpp
ffm_api/jcorex/: pom.xml
ffm_api/jcorex/src/main/java/net/api/kernel/: Config.java  Ops.java  Tensors.java
ffm_api/test/: pom.xml
ffm_api/test/src/main/java/: INFO.md  run_neural.sh
ffm_api/test/src/main/java/com/program/: JavaMatMulBenchmark.java  NplGemmFFM.java
project_test/: CMakeLists.txt  INFO_MKL.md  INFO_Neural_Test.md  mkl_sgemm_test.cpp  mkl_test  neural_layer_test.cpp  test_openblas_matmul  test_openblas_matmul.cpp
